Fixing header overflow

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,10 @@ header {
     text-align: center;
     color: #011640;
     position: fixed;
-    left: 50%;
-    transform: translate(-50%, 0);
+    top: 0;
+    z-index: 2;
+    background: linear-gradient(rgba(255,255,255,1) 0%, rgba(255,255,255,1) 90%, rgba(255,255,255,0) 100%);
+    width: 100%;
 }
 
 header h1 {
